fix: give the same mobile layout to the cards in the doctor section on iphone mini

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2628,6 +2628,44 @@ main .section-health .health-img-box .health-img.health-img--3 {
   .heading-primary {
     font-size: 38px;
   }
+
+  .arrow-btn.doctors-nav button {
+    position: absolute;
+    top: var(--swiper-navigation-top-offset, 50%);
+    margin-top: calc(0px - (var(--swiper-navigation-size) / 2));
+    z-index: 999999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .arrow-btn.doctors-nav button.left-btn {
+    left: 0;
+    right: auto;
+  }
+
+  .arrow-btn.doctors-nav button.right-btn {
+    right: 0;
+    left: auto;
+  }
+
+  .arrow-btn.doctors-nav button {
+    background-color: #37b24d;
+  }
+
+  .arrow-btn.doctors-nav button svg {
+    color: #fff;
+  }
+  
+  main .doctor-section .card {
+    width: 70%;
+    margin: 0 auto;
+  }
+
+  main .doctor-section .card .card-body img {
+    border-radius: 9px 9px 0 0;
+    object-position: top;
+  }
 }
 
 @media (min-width: 767.98px) {
